# mcp-atlas

./: .env.template  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  server.py  test_server.py
crawlers/: category_classifier.py  github_enricher.py  glama_crawler.py  npm_enricher.py  official_registry.py  pypi_enricher.py  quality_scorer.py  smithery_crawler.py  tool_extractor.py
data/: categories.json  classification_progress.json  extraction_results.json  restore.py  schema.graphql  servers.json  servers_for_classification.json  stacks.json
